👷 chore(ci): Update PR branch restriction to develop
The GitHub Actions workflow for restricting pull requests into `main`
was configured to check against the incorrect `dev` branch.

- Correct the base branch check from `dev` to `develop`.
- Update the accompanying error message to reflect the change.

This ensures the workflow properly enforces the intended branching
strategy, allowing only pull requests from the `develop` branch to
be merged into `main`.

--- a/.github/workflows/restrict-prs.yml
+++ b/.github/workflows/restrict-prs.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Check base branch
         run: |
-          if [ "${{ github.head_ref }}" != "dev" ]; then
-            echo "❌ Only pull requests from 'dev' branch can be merged into 'main'."
+          if [ "${{ github.head_ref }}" != "develop" ]; then
+            echo "❌ Only pull requests from 'develop' branch can be merged into 'main'."
             exit 1
           fi
