👷 chore(ci): clarify PR source branch check
Improve the clarity of the GitHub Actions workflow that restricts
pull requests to the `main` branch. The previous output was
somewhat vague regarding why a PR might be blocked.

- Rename workflow step to explicitly check the source branch
- Include the exact source branch in the rejection message
- Add a positive confirmation message when a PR from `develop`
  is correctly identified as allowed

This change provides better feedback to developers regarding the
status of their pull requests against the `main` branch, making
the CI/CD process more transparent.

--- a/.github/workflows/restrict-prs.yml
+++ b/.github/workflows/restrict-prs.yml
@@ -1,15 +1,20 @@
 name: Restrict PRs to main
+
 on:
   pull_request:
     branches:
       - main
+
 jobs:
   check-branch:
     runs-on: ubuntu-latest
     steps:
-      - name: Check base branch
+      - name: Check source branch
         run: |
           if [ "${{ github.head_ref }}" != "develop" ]; then
             echo "❌ Only pull requests from 'develop' branch can be merged into 'main'."
+            echo "Current source branch: ${{ github.head_ref }}"
             exit 1
+          else
+            echo "✅ Pull request from 'develop' branch is allowed."
           fi
