--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "devApi": "nodemon --exec \"node --loader ts-node/esm\" script.ts"
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
@@ -66,5 +67,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
+  },
+    "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
