--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/genai": "^1.19.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -41,6 +42,7 @@
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
@@ -68,7 +70,7 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   },
-    "prisma": {
+  "prisma": {
     "schema": "prisma/schema.prisma"
   }
 }
