--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
+    "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
     "prisma": "^6.17.1",
     "react": "19.1.0",
@@ -49,6 +51,7 @@
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
+    "swagger-ui-react": "^5.29.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
