--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start",
     "lint": "eslint",
     "prepare": "husky",
-    "devApi": "npx prisma generate && nodemon --exec \"node --loader ts-node/esm\" script.ts"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
