--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "lint-staged": "^16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
