--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@scalar/api-reference-react": "^0.8.1",
     "@tanstack/react-query": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,7 +46,6 @@
     "motion": "^12.23.24",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
-    "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
     "prisma": "^6.17.1",
     "react": "19.1.0",
@@ -54,7 +54,6 @@
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
-    "swagger-ui-react": "^5.29.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
