♻️ refactor(db): Update user role and model relations
Refactor the Prisma database schema to improve clarity and consistency.

- Rename 'user_type' field in the 'user' model to 'role'
- Rename the 'user_type' enum to 'user_role'
- Simplify explicit relation names in 'area' and 'rate' models
- Add Supabase temporary and branch files to .gitignore
- Reorder 'booking' and 'image' models in the schema file

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,10 @@ build/Release
 .env
 .env*
 
+# Supabase
+supabase/.temp/
+supabase/.branches/
+
 # ====================
 # React Frontend
 # ====================
