--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@scalar/api-reference-react": "^0.8.1",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,7 +47,6 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
     "next": "15.5.2",
-    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "prisma": "^6.17.1",
     "react": "19.1.0",
