--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^4.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
     "next": "15.5.2",
