--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -49,6 +50,7 @@
     "motion": "^12.23.24",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
