--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
     "@tiptap/extension-placeholder": "^3.10.7",
+    "@tiptap/pm": "3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
     "class-variance-authority": "^0.7.1",
