--- a/package.json
+++ b/package.json
@@ -40,7 +40,13 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
+    "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-placeholder": "^3.10.7",
+    "@tiptap/extension-table": "^3.10.7",
+    "@tiptap/extension-table-cell": "^3.10.7",
+    "@tiptap/extension-table-header": "^3.10.7",
+    "@tiptap/extension-table-row": "^3.10.7",
+    "@tiptap/extension-text-align": "^3.10.7",
     "@tiptap/pm": "3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
