--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "sanitize-html": "^2.17.0",
+    "select-philippines-address": "^1.0.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "zipcodes-ph": "^1.1.2",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
