--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
+    "ph-zipcode-lookup": "^1.0.9",
     "prisma": "^6.19.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
@@ -71,7 +72,6 @@
     "select-philippines-address": "^1.0.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zipcodes-ph": "^1.1.2",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
