--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tiptap/starter-kit": "^3.10.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
