--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "ph-zipcode-lookup": "^1.0.9",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
