--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "redis": "^5.10.0",
     "sanitize-html": "^2.17.0",
     "select-philippines-address": "^1.0.6",
     "sonner": "^2.0.7",
