--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
+    "@tiptap/core": "3.10.7",
     "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-placeholder": "^3.10.7",
     "@tiptap/extension-table": "^3.10.7",
