--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
     "@tiptap/core": "3.10.7",
+    "@tiptap/extension-heading": "^3.10.7",
     "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-placeholder": "^3.10.7",
     "@tiptap/extension-table": "^3.10.7",
@@ -86,8 +87,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.19.24",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/sanitize-html": "^2.16.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "15.5.2",
