--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "select-philippines-address": "^1.0.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "vercel": "^49.1.2",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
