--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "prisma generate && next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "prepare": "husky",
