--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "ph-zipcode-lookup": "^1.0.9",
+    "pnpm": "^10.28.2",
     "prisma": "6.19.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
