--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "redis": "^5.10.0",
+    "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
     "select-philippines-address": "^1.0.6",
     "sonner": "^2.0.7",
